tests/errors/prints-printf-args-mismatch-2.ja
procedure main()
  int x
  int y
  x += 42
  y += 1337

  // Should return argument mismatch
  printf("The answer to life, the universe and everything is %d %d", x)
